[package]
name = "zonulet-marketplace-contract-wrapper"
version = "0.1.0"
authors = ["Agin <info@zonulet.io>"]
edition = "2022"

[dev-dependencies]
near-sdk = "4.0.0-pre.3"
near-contract-standards = "4.0.0-pre.3"
near-sdk-sim = "4.0.0-pre.3"
zonulet-marketplace-contract = { path = "./zonulet-marketplace-contract" }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true

[workspace]
members = [
    "zonulet-marketplace-contract",
]
